# ffmpeg-cpp

./: .gitignore  CMakeLists.json  CMakeLists.txt  README.md  makefile
app/: main.cpp
docker/: docker-compose.yml
docker/minio/: config.env
docker/nginx/: Dockerfile
docker/nginx/conf/: nginx.conf
include/calculator/: main.h
include/ffmpeg/: ffmpeg.h
include/utils/: error.h  queue.h
scripts/: stream.sh
src/: calculator.cpp  example.cpp  ffmpeg.cpp
src/utils/: error.cpp  queue.cpp
